# pryngles

./: .gitignore  .versions  DEVELOPERS  DEVELOPERS.md  IDEAS.md  README.md  TODO  TODO.md  WHATSNEW.md  convert.sh  header.py  makefile  parse.py  pyproject.toml  release.sh  setup.py  setup.py.bak  setup.py.cpixx  setup.py.pixx
.pack/: deps_pack_macosx.conf  pack.sh  packrc
.store/: pack.conf
dep/.pack/: pack.sh
dep/src/: modules
dev/: _template.py  attic.ipynb  body.ipynb  deprecated.ipynb  performance.ipynb  pryngles-__init__.ipynb  pryngles-_base.ipynb  pryngles-_init.ipynb  pryngles-_template.ipynb  pryngles-base.ipynb  pryngles-body.ipynb  pryngles-consts.ipynb  pryngles-extensions.ipynb  pryngles-legacy.ipynb  pryngles-misc.ipynb  pryngles-observer.ipynb  pryngles-optics.ipynb  pryngles-orbit.ipynb  pryngles-physics.ipynb  pryngles-planet.ipynb  pryngles-plot.ipynb  pryngles-props.ipynb  pryngles-ring.ipynb  pryngles-sampler.ipynb  pryngles-scatterer.ipynb  pryngles-science.ipynb  pryngles-spangler.ipynb  pryngles-spangling.ipynb  pryngles-star.ipynb  pryngles-system.ipynb  template.ipynb
dev/.ipynb_checkpoints/: pryngles-__init__-checkpoint.ipynb  pryngles-body-checkpoint.ipynb  pryngles-consts-checkpoint.ipynb  pryngles-legacy-checkpoint.ipynb  pryngles-optics-checkpoint.ipynb  pryngles-orbit-checkpoint.ipynb  pryngles-physics-checkpoint.ipynb  pryngles-sampler-checkpoint.ipynb  pryngles-scatterer-checkpoint.ipynb  pryngles-spangler-checkpoint.ipynb  pryngles-system-checkpoint.ipynb
dev/bench/: pryngles-test.ipynb
dev/cpixx/: cpixx-dev-test.ipynb  cpixx.c  cpixx_dev.c  main.c  main.f  makefile  pixx.f  pixx_main.f  test_cpixx.py  test_cpixx_dev.py  test_mularray.py  test_pryngles_cpixx.py
dev/legacy/: pryngles-_init.ipynb  pryngles-base.ipynb  pryngles-legacy.ipynb
dev/tmp/: attic-old.ipynb  attic-part2.ipynb  backup-_base.ipynb  cpixx-dev-test.ipynb  generate_samples.ipynb  performance.ipynb  pryngles-dev.ipynb  pryngles-legacy-testbed.ipynb  pryngles-observer.ipynb  pryngles-pixx-dev.ipynb  pryngles-planet.ipynb  pryngles-ring.ipynb.bak  pryngles-sampler-legacy.ipynb  pryngles-sampler.ipynb  pryngles-spangle.ipynb  pryngles-spangler.bak.ipynb  pryngles-spangler.ipynb  pryngles-star.ipynb  pryngles-system.ipynb  sampler.pkl  spangler.ipynb  star-planet-ring.pkl  star.ipynb
doc/: DEVELOPERS.md  TODO.md
doc/deprecated/: .versions  setup.py.pixx
doc/tests/: flux_test.ipynb  kepler_51_test.ipynb
docs/: .gitignore  Makefile  conf.py  index.rst  requirements.txt
docs/tmp/: conf.py  (+1 more)
examples/: cronoring.csv  pryngles-demo-preparation.ipynb  pryngles-dev.ipynb  pryngles-dev1_intro-tutorial.ipynb  pryngles-dev3_spangler-tutorial.ipynb  pryngles-dev4_system-tutorial.ipynb  pryngles-dev6_legacy-tutorial.ipynb  pryngles-dev6_legacy_polarization-tutorial.ipynb  pryngles-system-demo.ipynb  pryngles-test-interpolation.ipynb  pryngles-test-releases.ipynb  pryngles-tutorial-camelinterface.ipynb  pryngles-tutorial-developers.ipynb  pryngles-tutorial-evolution.ipynb  pryngles-tutorial-exploration.ipynb  pryngles-tutorial-indepth.ipynb  pryngles-tutorial-quickstart.ipynb  system.bin.rbin
pryngles/: README.md  __init__.py  base.py  pyproject.toml  setup.py
pryngles/dev/: pryngles-base.ipynb
pryngles/dev/.ipynb_checkpoints/: pryngles-__init__-checkpoint.ipynb
pryngles/tests/: test-base.py
src/: __init__.temp  header.py  modules
tests/: __init__.ipynb  body.ipynb  consts.ipynb  extensions.ipynb  legacy.ipynb  misc.ipynb  orbit.ipynb  plot.ipynb  sampler-presets.py  sampler.ipynb  scatterer.ipynb  science.ipynb  system.ipynb
tmp/: plot.py  setup.py.bak  system.py  version.py.bak
(+291 files in other folders)
