##################################################################
#                                                                #
#.#####...#####...##..##..##..##...####...##......######...####..#
#.##..##..##..##...####...###.##..##......##......##......##.....#
#.#####...#####.....##....##.###..##.###..##......####.....####..#
#.##......##..##....##....##..##..##..##..##......##..........##.#
#.##......##..##....##....##..##...####...######..######...####..#
#................................................................#
#                                                                #
# PlanetaRY spanGLES                                             #
#                                                                #
##################################################################
# License http://github.com/seap-udea/pryngles-public            #
##################################################################
[build-system]
requires = ['setuptools','rebound','scipy','ipython',
	    'matplotlib','tqdm','dill',
	    'spiceypy','cmasher','pandas','celluloid',
	    'sigfig','anytree','ipywidgets','gdown'
	    ]
build-backend = "setuptools.build_meta"
